--- a/index.html
+++ b/index.html
@@ -38,19 +38,21 @@
         <path d="M357.881 0H444.156L108.642 680H0L357.881 0Z" fill="black" />
         <rect x="227" y="352" width="229" height="75" fill="black" />
       </svg>
-      <p data-aos="flip-left" data-aos-duration="1000" class="name-txt">
+      <p data-aos="zoom-in-down" data-aos-duration="1000" class="name-txt">
         Hello I'm Akash.
       </p>
-      <p data-aos="flip-right" data-aos-duration="1000" class="hero">
+      <p data-aos="zoom-in-up" data-aos-duration="1000" class="hero">
         I Love What I Do. <br />
         I design web and make it work.
       </p>
-      <a href="#">
-        <button class="animate__animated animate__rubberBand">
-          More <i class="fas fa-arrow-right"></i></button
+      <a href="mailto:plyby171@gmail.com">
+        <button class="animate__animated animate__backInRight">
+          Book For Yourself. <i class="fas fa-arrow-right"></i></button
       ></a>
     </section>
-    <section class="about"></section>
+    <section class="about">
+      
+    </section>
     <section class="skills"></section>
     <section class="projects"></section>
     <section class="contact"></section>
