--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./static/style.css" />
     <link rel="stylesheet" href="./static/all.min.css" />
   </head>
@@ -20,12 +24,12 @@
         <hr id="menu" />
         <hr id="menu" />
       </div>
-      <ul>
-        <a class="nav" href="#home"> <li>Home</li></a>
-        <a class="nav" href="#about"> <li>About</li></a>
-        <a class="nav" href="#skills"> <li>Skills</li></a>
-        <a class="nav" href="#projects"> <li>Projects</li></a>
-        <a class="nav" href="#contact"> <li>Contact</li></a>
+      <ul class="absolute" >
+        <a class="absolute" > <li>Home</li></a>
+        <a class="absolute" > <li>Skills</li></a>
+        <a class="absolute" > <li>Projects</li></a>
+        <a class="absolute" > <li>Contact</li></a>
+        <a class="absolute" > <li>About</li></a>
       </ul>
     </div>
 
