--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Goldman:wght@700&display=swap" rel="stylesheet"> 
+ 
     <link rel="stylesheet" href="./static/style.css" />
     <link rel="stylesheet" href="./static/all.min.css" />
   </head>
@@ -26,10 +25,10 @@
       </div>
       <ul class="absolute" >
         <a class="absolute" > <li>Home</li></a>
+        <a class="absolute" > <li>About</li></a>
         <a class="absolute" > <li>Skills</li></a>
         <a class="absolute" > <li>Projects</li></a>
         <a class="absolute" > <li>Contact</li></a>
-        <a class="absolute" > <li>About</li></a>
       </ul>
     </div>
 
@@ -42,10 +41,31 @@
         I make web and make it work. <br />
         I love what I do.
       </p>
-      <marquee><h1>Site under developement.</h1></marquee>
     </section>
-    <section id="about"></section>
-    <section id="skills"></section>
+    <section id="about">
+<div class="about-info">
+  About
+</div>
+<p class="about-me">
+  Everyone call me Sky. <br>
+My interest in Computer grew when I saw my friend doing phishing using his self made website. <br>
+I thought to beat him in it’s expertise and fell in this particular field. <br>
+When I got engeged to the computer then I used to do same thing and learnt coding. My first language was a Markup Language. Yes, it was html. It was 2016. <br>
+After learning some languages I opted IT field as professional. And now I am <span class="programmer">Programmer</span>.
+
+
+</p>
+    </section>
+    <section id="skills">
+      <div class="skills-info">
+        Skills
+      </div>
+      <div class="box-html"></div>
+      <div class="box-javascript"></div>
+      <div class="box-django"></div>
+      <div class="box-css"></div>
+      
+    </section>
     <section id="projects"></section>
     <section id="contact"></section>
     <script src="./static/all.min.js"></script>
