--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Goldman&display=swap" rel="stylesheet">
- 
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Goldman&display=swap"
+      rel="stylesheet"
+    />
+
     <link rel="stylesheet" href="./static/style.css" />
     <link rel="stylesheet" href="./static/all.min.css" />
   </head>
@@ -23,12 +30,12 @@
         <hr id="menu" />
         <hr id="menu" />
       </div>
-      <ul class="absolute" >
-        <a class="absolute" > <li>Home</li></a>
-        <a class="absolute" > <li>About</li></a>
-        <a class="absolute" > <li>Skills</li></a>
-        <a class="absolute" > <li>Projects</li></a>
-        <a class="absolute" > <li>Contact</li></a>
+      <ul class="absolute">
+        <a class="absolute"> <li>Home</li></a>
+        <a class="absolute"> <li>About</li></a>
+        <a class="absolute"> <li>Skills</li></a>
+        <a class="absolute"> <li>Projects</li></a>
+        <a class="absolute"> <li>Contact</li></a>
       </ul>
     </div>
 
@@ -37,34 +44,44 @@
       <p class="name">Hi, I'm Akash.</p>
       <p class="hero">
         Need a coder? <br />
-        You're at right place. <br>
+        You're at right place. <br />
         I make web and make it work. <br />
         I love what I do.
       </p>
+      <marquee><h1>Site under developement.</h1></marquee>
     </section>
     <section id="about">
-<div class="about-info">
-  About
-</div>
-<p class="about-me">
-  Everyone call me Sky. <br>
-My interest in Computer grew when I saw my friend doing phishing using his self made website. <br>
-I thought to beat him in it’s expertise and fell in this particular field. <br>
-When I got engeged to the computer then I used to do same thing and learnt coding. My first language was a Markup Language. Yes, it was html. It was 2016. <br>
-After learning some languages I opted IT field as professional. And now I am <span class="programmer">Programmer</span>.
-
-
-</p>
+      <div class="about-info">About</div>
+      <p class="about-me">
+        Everyone call me Sky. <br />
+        My interest in Computer grew when I saw my friend doing phishing using
+        his self made website. I thought to beat him in it’s expertise and fell
+        in this particular field. When I got engeged to the computer then I used
+        to do same thing and learnt coding. My first language was a Markup
+        Language. Yes, it was html. It was 2016. Now I work on various languages
+        and frameworks. After learning some languages I opted IT field as
+        professional. And now I am a<span class="programmer">Programmer</span>.
+      </p>
     </section>
     <section id="skills">
-      <div class="skills-info">
-        Skills
-      </div>
+      <div class="skills-info">Skills</div>
       <div class="box-html"></div>
-      <div class="box-javascript"></div>
+      <div class="box-javascript">
+        <svg
+          class="js-ring"
+          viewBox="0 0 169 168"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M69.4943 0.343041C50.6776 3.73852 33.5687 13.4154 20.9632 27.7925C8.35772 42.1696 1.00093 60.3969 0.0949153 79.496C-0.8111 98.5952 4.78723 117.437 15.9751 132.943C27.1631 148.449 43.2791 159.702 61.6899 164.863C80.1008 170.025 99.7178 168.789 117.336 161.359C134.954 153.929 149.531 140.743 158.686 123.957C167.84 107.17 171.031 87.7749 167.736 68.9402C164.442 50.1055 154.857 32.945 140.547 20.2627L133.938 27.7195C146.56 38.9064 155.015 54.0434 157.921 70.6571C160.827 87.2708 158.013 104.379 149.938 119.186C141.863 133.993 129.004 145.624 113.464 152.178C97.9234 158.732 80.6195 159.822 64.3797 155.269C48.1398 150.716 33.9242 140.79 24.0555 127.113C14.1869 113.435 9.2487 96.8152 10.0479 79.9682C10.8471 63.1212 17.3363 47.0432 28.4554 34.3615C39.5745 21.6797 54.6659 13.1439 71.2638 10.1488L69.4943 0.343041Z"
+            fill="#EC15E3"
+          />
+        </svg>
+        <div class="lang-html">HTML</div>
+      </div>
       <div class="box-django"></div>
       <div class="box-css"></div>
-      
     </section>
     <section id="projects"></section>
     <section id="contact"></section>
