--- a/index.html
+++ b/index.html
@@ -124,15 +124,21 @@
       </div>
     </section>
     <section id="projects">
-      <div class="project-box">
+
+      <div class="project-info">Projects</div>
+      <div class="project-text">
+        I am currently working on a small chatting app using Djngo, a Python web developement framework and Django Channels.
+      </div>
         <img
           class="project-image"
           src="./static/project.JPG"
           alt="Project Image"
         />
-      </div>
+    
     </section>
-    <section id="contact"></section>
+    <section id="contact">
+      <div class="contact-info">Contact</div>
+    </section>
     <script src="./static/all.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./static/script.js"></script>
