--- a/index.html
+++ b/index.html
@@ -138,12 +138,23 @@
     </section>
     <section id="contact">
       <div class="contact-info">Contact</div>
-    </section>
+    <div class="facebook" > <a href="https://www.facebook.com/profile.php?id=100037721570086" target="_blank"><i class="fab fa-facebook-f"></i>Facebook</a></div>
+    <div class="whatsapp">  <a href="https://wa.me/7831836353" target="_blank"><i class="fab fa-whatsapp"></i>/<i class="fas fa-phone"></i>Whatsapp me</a></div>
+   
+    <div class="instagram" ><a href="https://www.instagram.com/akash_sky_verma/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a></div>
+    <div class="location"><i class="fas fa-map-marker-alt"></i><br>
+    Village & Post Office: Mubarikpur, <br>
+  Tehsil: Amb, <br>
+District: Una, <br> 
+Himachal Pradesh, India
+- 177202</div>  
+  </section>
     <script src="./static/all.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./static/script.js"></script>
     <script>
       AOS.init();
     </script>
+    <script  async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCeCNl6DFHwdxk157r_H9IgkA6wvEmuFNI&callback=initMap"></script>
   </body>
 </html>
