--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
       <div class="contact-info">Contact</div>
     <div class="facebook" > <a href="https://www.facebook.com/profile.php?id=100037721570086" target="_blank"><i class="fab fa-facebook-f"></i>Facebook</a></div>
     <div class="whatsapp">  <a href="https://wa.me/+917831836353" target="_blank"><i class="fab fa-whatsapp"></i>/<i class="fas fa-phone"></i>Whatsapp me</a></div>
+      <div class="whatsapp">  <a href="tel:+917831836353" target="_blank"><i class="fab fa-whatsapp"></i>/<i class="fas fa-phone"></i>Whatsapp me</a></div>
     <div class="instagram" ><a href="https://www.instagram.com/akash_sky_verma/" target="_blank"><i class="fab fa-instagram"></i>Instagram</a></div>
     <div class="location"><i class="fas fa-map-marker-alt"></i><br>
     Village & Post Office: Mubarikpur, <br>
