--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    />
+    /><script data-ad-client="ca-pub-1262173417534540" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
