--- a/about.html
+++ b/about.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+     <meta name="description" content="Akash Verma">
+    <meta name="description" content="Web developer">
+    <meta name="description" content="Web designer">
+    <meta name="description" content="Dajngo Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Akash Verma | About</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
