--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="description" content="Akash Verma">
+    <meta name="description" content="Web developer">
+    <meta name="description" content="Web designer">
+    <meta name="description" content="Dajngo Developer">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Akash Verma | Home</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -32,7 +36,7 @@
                 </div>
             </div>
         </nav>
-    </header><img id="profile-img" src="assets/img/profile.jpg">
+    </header><img id="profile-img" alt=" Profile Pic"src="assets/img/profile.jpg">
     <div class="text-nowrap d-flex justify-content-center align-items-center animated-text noSelect" style="background: rgba(255,255,255,0);border-style: none;margin-top: 16px;width: 50%;margin-right: auto;margin-left: auto;"><div class="caption v-middle text-center">
     <h1 class="cd-headline clip">
         <span class="blc">I'm a</span>
