--- a/tools.html
+++ b/tools.html
@@ -3,8 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+     <meta name="description" content="Akash Verma">
+    <meta name="description" content="Web developer">
+    <meta name="description" content="Web designer">
+    <meta name="description" content="Dajngo Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Akash Verma | Tools</title>
+    <title>portfolio</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -45,7 +49,7 @@
             <div class="row">
                 <div class="col-12 text-center col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="text-center icon-box">
-                        <div class="icon"><img src="assets/img/figma_logo_icon_147289.png">
+                        <div class="icon"><img alt="Figma" src="assets/img/figma_logo_icon_147289.png">
                             <h4 class="title">Figma<a href="#"></a></h4>
                             <p class="description">The best ever wireframing and designing app. I am using it since 3 years and till now it gives me the same power to design something that you want.&nbsp; &nbsp; &nbsp;&nbsp;</p>
                         </div>
@@ -53,7 +57,7 @@
                 </div>
                 <div class="col-12 text-center col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="text-center icon-box">
-                        <div class="icon"><img src="assets/img/bs%20logo.png" style="height:150px;width:150px;">
+                        <div class="icon"><img alt="BootStrap" src="assets/img/bs%20logo.png" style="height:150px;width:150px;">
                             <h4 class="title">Bootstrap Studio<a href="#"></a></h4>
                             <p class="description">This makes me put the design, made by Figme, into reality. I have made this website also using Bootstrap Studio. It gives me various new features to make it playful.&nbsp; &nbsp; &nbsp;&nbsp;</p>
                         </div>
@@ -61,7 +65,7 @@
                 </div>
                 <div class="col-12 text-center col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="text-center icon-box">
-                        <div class="icon"><img src="assets/img/pcharm%20logo.png" style="height:150px;width:150px;">
+                        <div class="icon"><img alt="PyCharm" src="assets/img/pcharm%20logo.png" style="height:150px;width:150px;">
                             <h4 class="title">Pycharm<a href="#"></a></h4>
                             <p class="description">When it's problem solving time about a Django and Python code error then Pycharm enabes me to do so. I love pycharm as it has various inbuilt Python features.&nbsp; &nbsp; &nbsp;&nbsp;</p>
                         </div>
@@ -69,7 +73,7 @@
                 </div>
                 <div class="col-12 text-center col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="text-center icon-box">
-                        <div class="icon"><img src="assets/img/pnghut_microsoft-edge-web-browser-internet-explorer.png" style="height:150px;width150px;">
+                        <div class="icon"><img alt="MS-Edge" src="assets/img/pnghut_microsoft-edge-web-browser-internet-explorer.png" style="height:150px;width:150px;">
                             <h4 class="title">Microsoft Edge<a href="#"></a></h4>
                             <p class="description">In the past, Internet explorer was not a good at all. But now a days only Edge can give you the power of Front-End testing that other browsers can not give . Now I love Microsoft Edge.</p>
                         </div>
@@ -83,7 +87,7 @@
             <div class="row">
                 <div class="col-12 text-center col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
                     <div class="text-center icon-box">
-                        <div class="icon"><img src="assets/img/pnghut_visual-studio-code-microsoft-text-editor-source.png" style="height:150px;width150px;">
+                        <div class="icon"><img alt="VS Code" src="assets/img/pnghut_visual-studio-code-microsoft-text-editor-source.png" style="height:150px;width:150px;">
                             <h4 class="title">Visual Studio Code<a href="#"></a></h4>
                             <p class="description">When it's time to test the code other that Python, Visual Studion Code plays an important role. It gives me opportunity to collaborate with other programmers when I am unable to debug the code.&nbsp;</p>
                         </div>
