--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="description" content="Web developer">
     <meta name="description" content="Web designer">
     <meta name="description" content="Dajngo Developer">
+    <meta name="description" content="Sky Verma">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>portfolio</title>
