--- a/tools.html
+++ b/tools.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
      <meta name="description" content="Akash Verma">
     <meta name="description" content="Web developer">
+    <meta name="description" content="Sky Verma">
     <meta name="description" content="Web designer">
     <meta name="description" content="Dajngo Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
