--- a/contact.html
+++ b/contact.html
@@ -57,13 +57,14 @@
                     <div class="col-md-6 col-lg-5">
                         <h2 class="h4" style="margin-top: 35px;color: #00b5a8;border-color: #23295f;"><i class="fa fa-user" style="color: #00b5a8;"></i>&nbsp;Contact</h2>
                         <div style="padding-top: 10px;"><span><strong>Email me @</strong></span></div>
-                        <div><span>plyby171@gmail.com</span></div>
-                        <div style="padding-top: 10px;"><span><strong>WhatsApp me @</strong><br><span><br>+917831836353<br></span></span></div>
-                        <h2 class="h4" style="margin-top: 35px;color: #00b5a8;"><i class="fa fa-location-arrow" style="color: #00b5a8;"></i>&nbsp;Walk in&nbsp;</h2><span><strong>V. P. O. :Mubarikpur, Tehsil : Amb,&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;District : Una</strong><br></span><span>Himachal Pradesh, India, 177202<br></span>
-                    </div>
-                </div>
-            </div>
-        </div>
+ <div><span><a href="mailto:pyby171@gmail.com">plyby171@gmail.com</a></span></span></span></div>
+ <br>
+<div style="padding-top: 10px;"><span><strong>WhatsApp me @</strong><span><br><a href="https://api.whatsapp.com/send/?phone=+917831836353&text=Hi" target="_blank">+917831836353</a><br></span></span></div>
+<h2 class="h4" style="margin-top: 35px;color: #00b5a8;"><i class="fa fa-location-arrow" style="color: #00b5a8;"></i>&nbsp;Walk in&nbsp;</h2><span><strong>V. P. O. :Mubarikpur, <br>  Tehsil : Amb, <br> District : Una</strong><br></span><span>Himachal Pradesh, <br> India, <br> 177202<br></span>
+</div>
+</div>
+</div>
+</div>
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
