--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-     <meta name="description" content="Akash Verma">
+    <meta name="description" content="Akash Verma">
     <meta name="description" content="Web developer">
     <meta name="description" content="Web designer">
     <meta name="description" content="Sky Verma">
     <meta name="description" content="Dajngo Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>portfolio</title>
+    <title>Akash Verma | Contact</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -26,7 +26,9 @@
 <body>
     <header class="header-dark">
         <nav class="navbar navbar-dark navbar-expand-lg navigation-clean-search">
-            <div class="container"><a class="navbar-brand" href="https://iamskyverma.codes">Akash Verma</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="https://iamskyverma.codes">Akash Verma</a><button
+                    data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle
+                        navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link" href="https://iamskyverma.codes">Home</a></li>
@@ -46,28 +48,48 @@
         </div>
     </div>
     <section>
-        <div style="padding-top: 60px;padding-bottom: 30px;">
-            <div class="container" style="padding-bottom: 10px;">
-                <div class="text-center">
-                    <h4 style="font-size: 45px;margin-top: 15px;font-family: Poppins, sans-serif;"><strong>Contact Information</strong></h4>
-                    <hr style="border-color: rgb(0,0,0);width: 121px;">
+        <!--Main section starts from here!-->
+        <div class="main" style="padding-bottom: 10px;">
+            <div class="top"><iframe class="map"
+                    src="https://www.google.com/maps/d/u/0/embed?mid=1SzGU2qWLY_DU425kqp4V22ih05uPXvH-" frameborder="0"
+                    allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+            <div class="bottom">
+                <div class="left">
+                    <h2 class="h4" style="margin-top: 35px;color: #00b5a8;border-color: #23295f;"><i class="fa fa-user"
+                            style="color: #00b5a8;"></i>&nbsp;Online</h2>
+                    <div style="padding-top: 10px;"><span><strong>Email me @</strong></span></div>
+                    <div><span><a class="link"
+                                href="mailto:pyby171@gmail.com">plyby171@gmail.com</a></span></span></span></div>
+                    <br>
+                    <div style="padding-top: 10px;"><span><strong>WhatsApp me @</strong><span><br><a class="link"
+                                    href="https://api.whatsapp.com/send/?phone=+917831836353&text=Hi"
+                                    target="_blank">+917831836353</a><br></span></span></div>
                 </div>
-                <div class="row" style="margin-top: 44px;">
-                    <div class="col-md-12 col-lg-7"><iframe src="https://www.google.com/maps/d/u/0/embed?mid=1SzGU2qWLY_DU425kqp4V22ih05uPXvH-" width="100%" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
-                    <div class="col-md-6 col-lg-5">
-                        <h2 class="h4" style="margin-top: 35px;color: #00b5a8;border-color: #23295f;"><i class="fa fa-user" style="color: #00b5a8;"></i>&nbsp;Contact</h2>
-                        <div style="padding-top: 10px;"><span><strong>Email me @</strong></span></div>
- <div><span><a href="mailto:pyby171@gmail.com">plyby171@gmail.com</a></span></span></span></div>
- <br>
-<div style="padding-top: 10px;"><span><strong>WhatsApp me @</strong><span><br><a href="https://api.whatsapp.com/send/?phone=+917831836353&text=Hi" target="_blank">+917831836353</a><br></span></span></div>
-<h2 class="h4" style="margin-top: 35px;color: #00b5a8;"><i class="fa fa-location-arrow" style="color: #00b5a8;"></i>&nbsp;Walk in&nbsp;</h2><span><strong>V. P. O. :Mubarikpur, <br>  Tehsil : Amb, <br> District : Una</strong><br></span><span>Himachal Pradesh, <br> India, <br> 177202<br></span>
-</div>
-</div>
-</div>
-</div>
+                <div class="right"><strong>
+                        <h2 class="h4" style="margin-top: 35px;color: #00b5a8;"><i class="fa fa-location-arrow"
+                                style="color: #00b5a8;"></i>&nbsp;Walk in&nbsp;</h2><span>V. P. O. :Mubarikpur, <br>
+                            Tehsil : Amb, <br> District : Una<br></span><span>Himachal Pradesh, <br> India, <br>
+                            177202<br></span>
+                    </strong></div>
+            </div>
+        </div>
     </section>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script>
+        window.onload = () => {
+            var map = document.querySelector('.map');
+            var mapwidth = map.clientWidth;
+            var margin = (window.innerWidth - mapwidth) / 2 + 'px';
+            map.style.marginLeft = margin;
+            window.onresize = (e) => {
+                var map = document.querySelector('.map');
+                var mapwidth = map.clientWidth;
+                var margin = (window.innerWidth - mapwidth) / 2 + 'px';
+                map.style.marginLeft = margin;
+            };
+        };
+    </script>
     <script src="assets/js/Animated-Typing-With-Blinking.js"></script>
 </body>
 
