--- a/skills.html
+++ b/skills.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Sky Verma">
     <meta name="description" content="Dajngo Developer">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>portfolio</title>
+    <title>Akash Verma | Skills</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,700">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
