--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="container"><a class="navbar-brand" href="#">Akash Verma</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="https://iamskyverma.codes">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="./skills.html">Skills</a></li>
                         <li class="nav-item"><a class="nav-link" href="./tools.html">Tools</a></li>
