--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 <body style="font-family: Raleway, sans-serif;">
     <header class="header-dark">
         <nav class="navbar navbar-dark navbar-expand-lg navigation-clean-search">
-            <div class="container"><a class="navbar-brand" href="#">Akash Verma</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container"><a class="navbar-brand" href="/PortFolio">Akash Verma</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="/PortFolio/">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./skills.html">Skills</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./tools.html">Tools</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/PortFolio">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/PortFolio/about">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/PortFolio/skills">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/PortFolio/tools">Tools</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/PortFolio/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
